# 007-lakehouse-sync-dashboard

./: README.md  docker-compose.yml
backend/: .env.example  lakehouse_sync.db  pyproject.toml  requirements.txt  run.py  sample_data.py
backend/app/: config.py  database.py  main.py  schemas.py
backend/app/api/: __init__.py  assets.py  deps.py  lineage.py  stats.py  sync.py
backend/app/connectors/: __init__.py  hive_connector.py  oss_connector.py  starrocks_connector.py  tablestore_connector.py
backend/app/models/: __init__.py  database.py
backend/app/services/: __init__.py  lineage_service.py  sync_service.py
backend/app/utils/: __init__.py  data_processor.py  sql_lineage_parser.py
backend/tests/: test_api.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: assets.js  index.js  lineage.js  stats.js  sync.js
frontend/src/assets/styles/: global.scss  variables.scss
frontend/src/components/: ColumnTable.vue  LineageForceGraph.vue  PartitionTable.vue  PieChart.vue  StatCard.vue  TreeChart.vue  TrendChart.vue
frontend/src/data/: mock.js
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/styles/: dark-theme.scss
frontend/src/views/: AccelerationNetwork.vue  Dashboard.vue  Dictionary.vue  StorageTree.vue  Trend.vue
