[project]
name = "lakehouse-sync-dashboard-backend"
version = "0.1.0"
description = "Lakehouse Sync Dashboard Backend API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "aiosqlite>=0.19.0",
    "thrift>=0.16.0",
    "sasl>=0.3.1",
    "thrift-sasl>=0.4.3",
    "oss2>=2.18.0",
    "tablestore>=5.4.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.4",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.25.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
